--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "css-loader": "^0.23.1",
     "file-loader": "^0.11.2",
     "flow-bin": "^0.44.2",
-    "node-sass": "^3.7.0",
+    "node-sass": "4.12.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "svg-fill-loader": "0.0.8",
